--- a/helm/chart/values/prod/values.yaml
+++ b/helm/chart/values/prod/values.yaml
@@ -21,3 +21,6 @@ resources:
   limits:
     memory: 512Mi
     cpu: 1000m
+datadog:
+  apikey: vault:externalapis-kv/data/sharedsecrets/datadog/apikey#apikey
+  application-key: vault:externalapis-kv/data/sharedsecrets/datadog/application-key#application-key
