--- a/helm/chart/templates/deployment.yaml
+++ b/helm/chart/templates/deployment.yaml
@@ -48,11 +48,13 @@ spec:
             - name: kafkaSchemaRegistryPassword
               value: {{ .Values.kafka.schemaRegistryPassword }}
             - name: KAFKA_PUBLISHER_TOPIC
-              value: {{ .Values.kafka.publisherTopic}}
+              value: {{ .Values.kafka.publisherTopic }}
             - name: MANAGEMENT_METRICS_EXPORT_DATADOG_APIKEY
-              value: {{ .Values.datadog.apikey}}
+              value: {{ .Values.datadog.apikey }}
             - name: MANAGEMENT_METRICS_EXPORT_DATADOG_APPLICATION-KEY
-              value: {{ .Values.datadog.applicationKey}}
+              value: {{ .Values.datadog.applicationKey }}
+            - name: environment
+              value: {{ .Values.env.environment }}
           imagePullPolicy: Always
           ports:
             - name: http
