--- a/helm/chart/values/pp/values.yaml
+++ b/helm/chart/values/pp/values.yaml
@@ -23,4 +23,6 @@ resources:
     cpu: 1000m
 datadog:
   apikey: vault:externalapis-kv/data/sharedsecrets/datadog/apikey#apikey
-  applicationKey: vault:externalapis-kv/data/sharedsecrets/datadog/application-key#application-key
+  applicationKey: vault:externalapis-kv/data/sharedsecrets/datadog/applicationKey#applicationKey
+  env:
+    environment: preprod
